@@ -13,6 +13,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003002
+
 1.001000 2014-10-15T22:42:03Z
  [Added / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
