@@ -3,13 +3,14 @@ Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All
 {{$NEXT}}
  - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
  - Drop use of ConfigDumper Util
+ - Drop use of Test::KENTNL/dztest
 
  [Dependencies::Stats]
  - Dependencies changed since 1.001000, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1, suggests: +1)
  - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
  - runtime: -1 (recommends: +1)
- - test: +1 ↓1 (recommends: ↑1 ↓1)
+ - test: +1 ↓1 -1 (recommends: ↑1 ↓1)
 
 1.001000 2014-10-15T22:42:03Z f59f09b
  [Dependencies::Stats]
